fix backtrack link on al cem index

--- a/AlabamaCemeteriesWeb/index.html
+++ b/AlabamaCemeteriesWeb/index.html
@@ -166,7 +166,7 @@ Map</a></b>, Washington Street.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="LimestoneCounty/AndersonCem1/AndersonCem1Listing.html">Anderson
 (Frances)
 Cemetery</a>,</b> In a field, SW of intersection of Bowers &amp; Browns-Ferry Rd)<br>
-  
+
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <b>
 <a href="LimestoneCounty/AndrewsCem/AndrewsCemeteryListing.html">Andrews
@@ -259,63 +259,63 @@ S. of Bethel Tennessee 1 1/2 miles.<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>&nbsp;&nbsp;<a href="LimestoneCounty/LucasCem1/lucas_cemeteryListing.html">Lucas Cemetery</a></b>,
 Near Joe Wheeler Lake.<br>
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <b>
 <a href="LimestoneCounty/Malone(Polly)Cem(w)/Malone(Polly)Cem(w)Listing.html">Malone
 (Polly) Cemetery</a></b>,&nbsp; N. of Browns Ferry Rd.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <b>
 <a href="LimestoneCounty/Malone(Polly)Cem(b)/Malone(Polly)(b)Cemlisting.html">Malone
 (Polly) Cemetery</a>, </b>African-American, Browns-Ferry Rd. (adjacent to old
 white graves<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <b>
 <a href="LimestoneCounty/MartinCemetery/MartinCemlisting.html">Martin
 Cemetery</a></b>, Bradford Rd south of Hwy 72 and east of Athens<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>&nbsp;&nbsp;<a href="LimestoneCounty/McCargo-CrutcherCem/McCargoCemListing.html">McCargo-Newby-Crutcher Cemetery</a></b>, Harvest Road<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>&nbsp;&nbsp;<a href="LimestoneCounty/McClellanCemLimestoneCoAl/McClellanCem.html">McClellan Cemetery</a></b>,
-  
+
   (Limestone County,
 AL. 10 mi east of Athens, Complete)<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>&nbsp;&nbsp;<a href="LimestoneCounty/McCullyCem/McCullyCemListing.html">McCully Cemetery</a></b>,
   (5 mi northeast of Athens-listing only)<br>
-  
+
   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <font face="Comic Sans MS" color="#800000"><b>
 <a href="LimestoneCounty/MenefeeCem/Menefee_cemListing.html">Menefee
 Cemetery</a></b>, Capshaw Road, N side.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <b>
 <a href="LimestoneCounty/MilhouseCem/MilhousCemListing.html">Milhouse
 Cemetery</a></b>, E of 251, N of Wooly Springs Rd.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <b>
 <a href="LimestoneCounty/MitchellCem2/MitchellCem2Listing.html">Mitchell
 Cemetery #2</a></b>, E of 251, E of Wooly Springs Rd.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <b>
 <a href="LimestoneCounty/MontgomeryCem/MotgomeryCemeteryListing.html">Montgomery
 Cemetery</a></b>, (down from the New Garden Cem in
 woods.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <b>
 <a href="LimestoneCounty/MooresvilleCem/MooresvilleCem-MicheleJackson.html">Mooresville
 (old)
 Cemetery</a></b>, (south of Mooresville - by
 Michele Jackson - not on this site.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <b>
 <a href="LimestoneCounty/MorrisCemetery/MorrisCemListing.html">Morris
 Cemetery</a></b>, South 1/2 mile from Robinson Road.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <b>
 <a href="LimestoneCounty/MotesCem/Motes_CemListing.html">Motes
 Cemetery</a></b>, North &amp; beside Coggins Rd.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <b>
-  
+
 <a href="LimestoneCounty/NelsonCemetery/NesonCemlisting.html">Nelson Cemetery</a></b>,
 Buck Island Road NW Limestone County Al<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-  
+
   <b>
 <a href="LimestoneCounty/OldNewGardenCem/OldNewGardenCemeteryListing.html">New
 Garden Cemetery</a></b>, Limestone County Al - Old Section<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -409,11 +409,11 @@ off Jade Road far from the road, 4 listings &amp; photos.<br>
 <b>
 <a href="MadisonCounty/Allison-HewlettCem/Allison-HewlettCemListing.html">Allison-Hewlett Cemetery</a>,</b>
 on Winchester Road listings &amp; photos.<br>
-  
+
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>
 <a href="MadisonCounty/Bailes-BroylesCem/Bailes-BroylesCemList.html">Bailes-Broyles Cemetery</a></b>,
-Hurricane Creek Valley. 
+Hurricane Creek Valley.
 Rev. War Soldier monument.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>
 <a href="MadisonCounty/BaileyCem/BaileyCemeteryListing.html">Bailey-Crutcher Cemetery</a></b>,
 Mill Road in Madison in new subdivision.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <b>
@@ -487,7 +487,7 @@ New Market - 420 Listings and a few photos.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nb
   <b><a href="MadisonCounty/Cole-HollowayCem/Cole-HollowayCemListing.html">Cole-Holloway Cemetery</a></b>,
 Ready Section Rd area.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/ConnallyCemMadisonCo/ConnallyCemListing.html">Connally Cemetery</a></b>,
-St Clair Lane - 
+St Clair Lane -
 Rev War Soldier, John Connally is believed to lye
 here<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/CorneliusCem/CorneliusCemListing.html">Cornelius Cemetery</a></b>,
@@ -496,7 +496,7 @@ Bob Wade Lane aka Research Park Blvd<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbs
 <a href="MadisonCounty/Daniel-LawlerCemMadisonCo/Daniel-LawlerCemListing.html">Daniel-Lawler Cemetery</a></b>,
 Maysville<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/DavieCemMadisonCoAl/DavieCemListing.html">Davie Cemetery</a></b>,
-W. Limestone Co Rd. 
+W. Limestone Co Rd.
 Rev War Soldier, Robert Davie<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/DedmanCem/DedmanCemeterylisting.html">Dedman Cemetery</a></b>,
 Wall-Triana Highway - destroyed or lost<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -507,7 +507,7 @@ Jimmy Fisk Road<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/Douglass-PettusCem/Douglass-PettusCemListing.html">Douglass-Pettus Cemetery</a></b>,
 Douglass Rd NW<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/Drake(John)Cem/Drake(John)Cem.html">Drake (John) Cemetery</a></b>,
-Garth Rd SE 
+Garth Rd SE
 Rev War Soldier, John Drake<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/Drake-KeithCem/Drake-KeithCemListing.html">Drake-Keith Cemetery</a></b>,
 Maysville, 2 graves<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -519,7 +519,7 @@ Echols-Hollowell Cemetery</a></b>,
 Moores Mill Rd - Subdivision<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b>
 <a href="MadisonCounty/EldridgeCemMadisonCo_RevWar/Eldridge-powellCemeteryListing.html">Eldridge-Powell Cemetery</a></b>,&nbsp;
-West Ridge Dr. 
+West Ridge Dr.
 Rev War Soldier,&nbsp; Peyton Powell<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b>
 <a href="MadisonCounty/EllisCemMadisonCo/EllisCemListing.html">Ellis Cemetery</a></b>,
@@ -603,7 +603,7 @@ New Market.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Martin Rd.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b>
 <a href="MadisonCounty/Jeffries-RouttCem/Jeffries-RouttListing.html">Jeffries-Routt Cemetery</a></b>,
-(history behind this cemetery- Elizabeth, m. 6 times. 
+(history behind this cemetery- Elizabeth, m. 6 times.
 Soldier of the Revolution.)<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b>
 <a href="MadisonCounty/Jones(Judy)Cem/Jones(Judy)CemListing.html">Jones
@@ -693,7 +693,7 @@ Green Lawn Plantation, about 14 burials<br>
   <b>
 <a href="MadisonCounty/Palmer-CrutcherCem/Palmer_Cartwright-CrutcherCemList.html">Palmer/Cartwright-Crutcher Cemetery</a></b>,
 Palmer
-Rd 100 yards from Junction of Co. Line Rd on S. side of Rd.<br> 
+Rd 100 yards from Junction of Co. Line Rd on S. side of Rd.<br>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b>
@@ -701,10 +701,10 @@ Rd 100 yards from Junction of Co. Line Rd on S. side of Rd.<br>
 African American. east side of Riverton Rd.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b>
 <a href="MadisonCounty/PerkinsCemUAHCampusMadisonCoAl/Perkins-JonesCemListing.html">Perkins-Jones Cemetery</a></b>,
-Campus of UAH - 
+Campus of UAH -
 Rev. War soldier's memorial here.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/PetteyCem/PetteyCemListing.html">Pettey Cemetery</a></b>,
-Macon Lane.&nbsp; - 
+Macon Lane.&nbsp; -
 Rev. War soldier's memorial here.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/Pettey-SpraginsCem/Pettey-SpraginsCemListing.html">Pettey-Spragins Cemetery</a></b>,
 Mint Springs Rd, west side no photos.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -733,34 +733,34 @@ remains could be here.
 
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/SmithCem/Smith_CemListing.html">Smith Cemetery</a></b>,
-Subdivision, Lincarrie Lane off of Nick Davis Rd. 
+Subdivision, Lincarrie Lane off of Nick Davis Rd.
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/SpriggsCem/SpriggsCemListing.html">Spriggs Cemetery</a></b>,
-Kelly Hill Rd. 
+Kelly Hill Rd.
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b>
 <a href="MadisonCounty/StClairCem/StClairCemListing.html">St. Clair Cemetery</a></b>,
-40+ Listings Hurricane Valley. 
+40+ Listings Hurricane Valley.
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b>
 <a href="MadisonCounty/SteeleCem/SteeleCemListing.html">Steele Cemetery</a></b>,
-10+ Listings Winchester Hwy (65). 
+10+ Listings Winchester Hwy (65).
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/StoneCem/StoneCemListing.html">Stone Cemetery</a></b>,
 Northeast section of county  Rev War
-Soldier Reuben Stone has memorial here 
+Soldier Reuben Stone has memorial here
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/Strong-DouglassCem/Strong-DouglassCemListing.html">Strong-Douglass Cemetery</a></b>,
-Northeast of the junction of Monroe Rd and Pulaski Pike 
+Northeast of the junction of Monroe Rd and Pulaski Pike
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b>
 <a href="MadisonCounty/Strong(CharlesW.-George)CemsMadisonCo/Strong(CW)CemListing.html">Strong
 (George) Cemetery</a></b>,
-(listed at the bottom of the Charles W. Strong Cem.) 
+(listed at the bottom of the Charles W. Strong Cem.)
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b>
 <a href="MadisonCounty/Strong(CharlesW.-George)CemsMadisonCo/Strong(CW)CemListing.html">Strong
-(Charles W.) Cemetery</a></b>, Mt Charron Rd. 
+(Charles W.) Cemetery</a></b>, Mt Charron Rd.
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   <b><a href="MadisonCounty/ThompsonCem/ThompsonCemeteryListing.html">Thompson Cemetery</a></b>,
 behind the Madison Co Co-op.<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -837,7 +837,7 @@ posting here. We emphasize genealogy, cemetery preservation and history.&nbsp;
 Purpose</a> </b>
 </p>
 <p align="center"><b>&nbsp;*
-<a href="../cemetery/index.html">MAURY &amp; MIDDLE TENNESSEE CEMETERIES</a>
+<a href="../index.html">MAURY &amp; MIDDLE TENNESSEE CEMETERIES</a>
 *
 </b></p>
 
