clean single directory

--- a/AdkisonCem/Obits02.html
+++ b/AdkisonCem/Obits02.html
@@ -1,27 +1,25 @@
-<html>
-
-    <head>
-        <meta http-equiv="content-language" content="en-us">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="../main.css">
+<html><head>
+        <meta content="en-us" http-equiv="content-language"/>
+        <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+        <link href="../main.css" rel="stylesheet" type="text/css"/>
         <title>Adkison Cemetery</title>
     </head>
 
     <body>
         <blockquote>
-            <p align="center"><b>ADKISON CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE</br>
-                    </br> *BEARD, Jennie Mae Shouse,&nbsp;20 Nov 1915 - 5 Apr 2010. (Maury Co. native; d/o William Thomas Shouse and Dora Elizabeth Hill Shouse. mar. 27 Sept 1935 to Ralph Beard, Sr., who died 31 Jul 2006; preceded in death by
-                    grandson, Timothy Ralph Beard; daughter-in-law Janie Beard; son-in-law, Gilbert Green, brothers Cleveland, and Malcolm Shouse, sisters, Addie McKee, Louise Burns, Catherine Warren and Ruby Lewis.)</br> &nbsp;</br> Jennie Mae
-                    Shouse Beard, 94, retired seamstress and resident of Lewis Road in the Santa Fe Community, died Monday, April 5, 2010 at Maury Regional Medical Center.</br> Burial in Adkison Cemetery.</br> The Maury County native was the daughter
+            <p align="center"><b>ADKISON CEMETERY, SANTA FE, (West) MAURY COUNTY TENNESSEE<br/>
+                    <br/> *BEARD, Jennie Mae Shouse, 20 Nov 1915 - 5 Apr 2010. (Maury Co. native; d/o William Thomas Shouse and Dora Elizabeth Hill Shouse. mar. 27 Sept 1935 to Ralph Beard, Sr., who died 31 Jul 2006; preceded in death by
+                    grandson, Timothy Ralph Beard; daughter-in-law Janie Beard; son-in-law, Gilbert Green, brothers Cleveland, and Malcolm Shouse, sisters, Addie McKee, Louise Burns, Catherine Warren and Ruby Lewis.)<br/>  <br/> Jennie Mae
+                    Shouse Beard, 94, retired seamstress and resident of Lewis Road in the Santa Fe Community, died Monday, April 5, 2010 at Maury Regional Medical Center.<br/> Burial in Adkison Cemetery.<br/> The Maury County native was the daughter
                     of the late William Thomas Shouse and Dora Elizabeth Hill Shouse. On September 27, 1935 she married Ralph Beard, Sr. who preceded her in death on July 31, 2006. Mrs. Beard was employed at several clothing manufacturers including
-                    Storktown, Weather Tamer, and retired from Edric Manufacturing. She also took in private sewing and alterations in her home. She was a member of Knob Creek Baptist Church.</br> Survivors include two daughters, Helen Green of
-                    Culleoka; Juanita (Bill) Smith of Columbia; two sons, Ralph Beard, Jr. and Tommy (Marilyn) Beard, both of Columbia.</br> She was preceded in death by grandson, Timothy Ralph Beard; daughter-in-law, Janie Beard; son-in-law, Gilbert
-                    Green; brothers, Cleveland Shouse and Malcolm Shouse; and sisters, Addie McKee, Louise Burns, Catherine Warren, and Ruby Lewis.</br> Columbia Daily Herald 7 Apr 2010.</br> &nbsp;&nbsp;</br>
-                    ================================================</br>
+                    Storktown, Weather Tamer, and retired from Edric Manufacturing. She also took in private sewing and alterations in her home. She was a member of Knob Creek Baptist Church.<br/> Survivors include two daughters, Helen Green of
+                    Culleoka; Juanita (Bill) Smith of Columbia; two sons, Ralph Beard, Jr. and Tommy (Marilyn) Beard, both of Columbia.<br/> She was preceded in death by grandson, Timothy Ralph Beard; daughter-in-law, Janie Beard; son-in-law, Gilbert
+                    Green; brothers, Cleveland Shouse and Malcolm Shouse; and sisters, Addie McKee, Louise Burns, Catherine Warren, and Ruby Lewis.<br/> Columbia Daily Herald 7 Apr 2010.<br/>   <br/>
+                    ================================================<br/>
                     <i>Added here by Wayne Austin sent in by Mary Bob McClain Sep 2016.</i>
-                </b><i></br>
+                </b><i><br/>
                 </i>
-                <b>&nbsp;<a href="AdkisonCemList.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a></br> &nbsp;</b>
-    </body>
+                <b> <a href="AdkisonCemList.html"><img <="" border="0" font="" height="56" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" width="100"/></a><br/>  </b>
+    
 
-</html>
+</p></blockquote></body></html>
