--- a/AdkisonCem/Obits03.html
+++ b/AdkisonCem/Obits03.html
@@ -1,27 +1,25 @@
-<html>
-
-    <head>
-        <meta http-equiv="content-language" content="en-us">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="../main.css">
+<html><head>
+        <meta content="en-us" http-equiv="content-language"/>
+        <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+        <link href="../main.css" rel="stylesheet" type="text/css"/>
         <title>Adkison Cemetery</title>
     </head>
 
     <body>
         <blockquote>
-            <p align="center"><b>ADKISON CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE</br>
-                    </br> SHEPHERD, Thelma Hunt Beasley,&nbsp;15 Nov 1932 - 17 Jan 2012. (Ohio Co., Ky native; d/o late Elbert Hunt and Ina May Miller Hunt Shellhorn; 1st mar. Everett Conrad Beasley who died, 2nd mar. Larry Shepherd; retired nurse's
-                    aide; preceded in death by sons, David and Larry Beasley and grandson, Jadi Bailey.)</br> &nbsp;</br> Thelma Louise Hunt Beasley Shepherd, 79, a resident of Dawson Drive, Columbia, Tenn., went to be with the Lord Tuesday, Jan. 17,
+            <p align="center"><b>ADKISON CEMETERY, SANTA FE, (West) MAURY COUNTY TENNESSEE<br/>
+                    <br/> SHEPHERD, Thelma Hunt Beasley, 15 Nov 1932 - 17 Jan 2012. (Ohio Co., Ky native; d/o late Elbert Hunt and Ina May Miller Hunt Shellhorn; 1st mar. Everett Conrad Beasley who died, 2nd mar. Larry Shepherd; retired nurse's
+                    aide; preceded in death by sons, David and Larry Beasley and grandson, Jadi Bailey.)<br/>  <br/> Thelma Louise Hunt Beasley Shepherd, 79, a resident of Dawson Drive, Columbia, Tenn., went to be with the Lord Tuesday, Jan. 17,
                     2012, at Select Specialty Hospital in Nashville, Tenn. Funeral services will be Friday at 2 p.m. at Oakes &amp; Nichols Funeral Home in Columbia, Tenn. Burial will be in Adkison Cemetery. The family will visit with friends
-                    Thursday from 4-8 p.m. at the funeral home.&nbsp;</br> A native of Ohio County, Ky., she was the daughter of the late Elbert Hunt and Ina May Miller Hunt Shellhorn. She was first married to Everett Conrad Beasley who preceded her
+                    Thursday from 4-8 p.m. at the funeral home. <br/> A native of Ohio County, Ky., she was the daughter of the late Elbert Hunt and Ina May Miller Hunt Shellhorn. She was first married to Everett Conrad Beasley who preceded her
                     in death and then later married Larry Shepherd of Columbia, Tenn. Thelma was a retired nurse's aide. Surviving in addition to her husband, are daughters, Karen (Robert) Tomblin, Linda (Donnie) McVay and Milly Edwards, sons, Randy
                     (Ruby) Beasley, Jerry (Helen) Beasley and Darrell (Kathy) Beasley; 20 grandchildren; 25 great-grandchildren; seven great-great grandchildren; brothers, Elmer Hunt, Oscar Hunt, Lloyd Shellhorn and Jerry Shellhorn; daughters-in-law,
                     Myrtle Beasley and Judy Beasley; and extended family and friends of Larry Shepherd. She was preceded in death by sons, David Beasley and Larry Beasley; and a grandson, Jade Bailey. Family and friends will serve as
-                    pallbearers.&nbsp;</br> &nbsp;</br> &nbsp;===========================================</br>
+                    pallbearers. <br/>  <br/>  ===========================================<br/>
                     <i>Added here by Wayne Austin sent in by Mary Bob McClain Sep 2016.</i>
-                </b><i></br>
+                </b><i><br/>
                 </i>
-                <b>&nbsp;<a href="AdkisonCemList.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a></br> &nbsp;</b>
-    </body>
+                <b> <a href="AdkisonCemList.html"><img <="" border="0" font="" height="56" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" width="100"/></a><br/>  </b>
+    
 
-</html>
+</p></blockquote></body></html>
