--- a/AdkisonCem/Obits05.html
+++ b/AdkisonCem/Obits05.html
@@ -1,25 +1,23 @@
-<html>
-
-    <head>
-        <meta http-equiv="content-language" content="en-us">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="../main.css">
+<html><head>
+        <meta content="en-us" http-equiv="content-language"/>
+        <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+        <link href="../main.css" rel="stylesheet" type="text/css"/>
         <title>Adkison Cemetery</title>
     </head>
 
     <body>
         <blockquote>
             <p align="center">
-                <b> ADKISON CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE</br>
-                    </br> add 0N with obit</br> &nbsp;</br> LEE RAINEY, Anna Lise M. Lee,&nbsp; 2 Dec 2014 - 31 Dec 2015. (d/o Derek Crafton &amp; Emily Rainey.) obit</br> &nbsp;</br> Anna-Lise M. Lee-Rainey, one year old infant, passed away on
-                    Thursday, December 31, 2016 at Maury Regional Medical Center.&nbsp;</br> Burial in Adkisson Cemetery.</br> Heritage Funeral Home is assisting the family with arrangements.</br> Born on December 2, 2014 in Maury County, Anna-Lise
-                    was the daughter of Derek Crafton and Emily Rainey. She was a cheerful, loveable baby who was loved by many.&nbsp;</br> In addition to her parents, she is survived by her paternal grandmother: Ivy Beard; maternal grandmother:
-                    Jenny Tatum; and foster father: Ron Burgess and family.&nbsp;</br> She was preceded in death by her foster mother: Cynthia Burgess.&nbsp;</br> &nbsp;</br> =======================================</br>
+                <b> ADKISON CEMETERY, SANTA FE, (West) MAURY COUNTY TENNESSEE<br/>
+                    <br/> add 0N with obit<br/>  <br/> LEE RAINEY, Anna Lise M. Lee,  2 Dec 2014 - 31 Dec 2015. (d/o Derek Crafton &amp; Emily Rainey.) obit<br/>  <br/> Anna-Lise M. Lee-Rainey, one year old infant, passed away on
+                    Thursday, December 31, 2016 at Maury Regional Medical Center. <br/> Burial in Adkisson Cemetery.<br/> Heritage Funeral Home is assisting the family with arrangements.<br/> Born on December 2, 2014 in Maury County, Anna-Lise
+                    was the daughter of Derek Crafton and Emily Rainey. She was a cheerful, loveable baby who was loved by many. <br/> In addition to her parents, she is survived by her paternal grandmother: Ivy Beard; maternal grandmother:
+                    Jenny Tatum; and foster father: Ron Burgess and family. <br/> She was preceded in death by her foster mother: Cynthia Burgess. <br/>  <br/> =======================================<br/>
                     <i>Added here by Wayne Austin sent in by Mary Bob McClain Sep 2016.</i>
-                </b><i></br>
+                </b><i><br/>
                 </i>
                 <b>
-                    <a href="AdkisonCemList.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a></b></br> &nbsp;
-    </body>
+                    <a href="AdkisonCemList.html"><img <="" border="0" font="" height="56" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" width="100"/></a></b><br/>  
+    
 
-</html>
+</p></blockquote></body></html>
