--- a/AdkisonCem/AdkisonCemMap.html
+++ b/AdkisonCem/AdkisonCemMap.html
@@ -1,30 +1,28 @@
-<html>
-
-    <head>
-        <meta http-equiv="content-language" content="en-us">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="../main.css">
+<html><head>
+        <meta content="en-us" http-equiv="content-language"/>
+        <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+        <link href="../main.css" rel="stylesheet" type="text/css"/>
         <title>Adkison Cemetery</title>
     </head>
 
     <body>
         <blockquote>
-            <p align="center"><b>ADKISON CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE</br>
-                    <img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/AdkisonRoad.jpg" width="399" height="393"></br>
-                </b><b>Mr Fred's instructions of 1987: From Hilltown go east (or right) on Chestnut Ridge Rd for 1 &amp; 1/4 miles and turn right (or south) on Lewis Rd. The cemetery is on the right 1/4 mile down Lewis Road road.</br> Another set of
-                    instructions: From Santa Fe go northwest on Hwy 7 (Fly Road) for a short distance and turn north (right) on Lewis Road. Follow Lewis Road for about 2 miles and the cemetery is on your left.</br>
+            <p align="center"><b>ADKISON CEMETERY, SANTA FE, (West) MAURY COUNTY TENNESSEE<br/>
+                    <img border="0" height="393" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/AdkisonRoad.jpg" width="399"/><br/>
+                </b><b>Mr Fred's instructions of 1987: From Hilltown go east (or right) on Chestnut Ridge Rd for 1 &amp; 1/4 miles and turn right (or south) on Lewis Rd. The cemetery is on the right 1/4 mile down Lewis Road road.<br/> Another set of
+                    instructions: From Santa Fe go northwest on Hwy 7 (Fly Road) for a short distance and turn north (right) on Lewis Road. Follow Lewis Road for about 2 miles and the cemetery is on your left.<br/>
                 </b><b>
-                    <img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/AdkisonTopozone.jpg" width="437" height="362"></br>
-                    <img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/AdkisonAerial.jpg" width="727" height="502"><Br> With this aerial view one can actually see the stones populating the ground inside the decorative
-                    tree line. The yellow arrow points to the center of the cemetery.</br>
-                    <i>Maps from MS Streets&nbsp; &amp; Trips 2005, Topozone &amp; Mapquest, all modified to show this cemetery location by Wayne Austin 15 Jan 2009</i></b><i></br>
-                    </a></i></br>
+                    <img border="0" height="362" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/AdkisonTopozone.jpg" width="437"/><br/>
+                    <img border="0" height="502" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/AdkisonAerial.jpg" width="727"/><br/> With this aerial view one can actually see the stones populating the ground inside the decorative
+                    tree line. The yellow arrow points to the center of the cemetery.<br/>
+                    <i>Maps from MS Streets  &amp; Trips 2005, Topozone &amp; Mapquest, all modified to show this cemetery location by Wayne Austin 15 Jan 2009</i></b><i><br/>
+                    </i><br/>
                 <b>
-                    <CENTER>
-                        <a href="AdkisonCemList.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a>
-                    </CENTER>
+                    </b></p><center><b>
+                        <a href="AdkisonCemList.html"><img <="" border="0" font="" height="56" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" width="100"/></a>
+                    </b></center><b>
                 </b>
-            </p>
-    </body>
+            <p></p>
+    
 
-</html>
+</blockquote></body></html>
