--- a/AdkisonCem/Oakley01.html
+++ b/AdkisonCem/Oakley01.html
@@ -1,31 +1,29 @@
-<html>
-
-    <head>
-        <meta http-equiv="content-language" content="en-us">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="../main.css">
+<html><head>
+        <meta content="en-us" http-equiv="content-language"/>
+        <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+        <link href="../main.css" rel="stylesheet" type="text/css"/>
         <title>Adkison Cemetery</title>
     </head>
 
     <body>
         <blockquote>
-            <p align="center"><b>ADKISON CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE</br>
-                    <img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/Oakley1.jpg" width="265" height="359"><Br>
-                    </br> *OAKLEY, Arthur D.,&nbsp;10 Jul 1957 - 5 Nov 2003. (Maury Co. native; son of W.H. and Lillie Mae Dial Oakley; hus. of Carolyn Fitzgerald Oakley; preceded in death by daughter, Lacy Nicole Oakley and brother, Rayburn Clark
-                    Oakley.)</br> &nbsp;</br> Mr. Arthur D. Oakley, 46, died Wednesday, Nov. 5, 2003 at his residence on Woolard Road in the Santa Fe Community.&nbsp;</br> Funeral services for Mr. Oakley will be conducted Friday, November 7, 2003 at
+            <p align="center"><b>ADKISON CEMETERY, SANTA FE, (West) MAURY COUNTY TENNESSEE<br/>
+                    <img border="0" height="359" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/Oakley1.jpg" width="265"/><br/>
+                    <br/> *OAKLEY, Arthur D., 10 Jul 1957 - 5 Nov 2003. (Maury Co. native; son of W.H. and Lillie Mae Dial Oakley; hus. of Carolyn Fitzgerald Oakley; preceded in death by daughter, Lacy Nicole Oakley and brother, Rayburn Clark
+                    Oakley.)<br/>  <br/> Mr. Arthur D. Oakley, 46, died Wednesday, Nov. 5, 2003 at his residence on Woolard Road in the Santa Fe Community. <br/> Funeral services for Mr. Oakley will be conducted Friday, November 7, 2003 at
                     10:00 a.m. in the chapel of Williams Columbia Funeral Home with the Rev. Howard Alexander officiating. Burial will be in the Attkisson Cemetery. The family will visit with friends Thursday from 4:00 until 9: 00 p.m. at the funeral
-                    home.</br> The Maury County native was the son of the late W.H. and Lillie Mae Dial Oakley and husband of Carolyn Fitzgerald Oakley. He was the owner and operator of the Santa Fe Diner and a member of the Church of the Nazarene.
+                    home.<br/> The Maury County native was the son of the late W.H. and Lillie Mae Dial Oakley and husband of Carolyn Fitzgerald Oakley. He was the owner and operator of the Santa Fe Diner and a member of the Church of the Nazarene.
                     In addition to his wife, he is survived by a daughter, Heather Mai Oakley of Columbia; a grandson, Brian Hunter Duke of Columbia; a brother, Willard Harvel Oakley of Santa Fe and a sister, Connie Reichmann of Killen, AL. He was
-                    preceded in death by a daughter, Lacy Nicole Oakley and a brother, Rayburn Clark Oakley.&nbsp;</br> Pallbearers will be Robert Fitzgerald, Jerry Lee Fitzgerald, Marvin Fitzgerald, Ken Kizer, Nick Reichmann and Marvin Scott.
-                    Honorary pallbearers will be Buddy Burns, Daniel Beard, Freddie Owens, Michelle Scott and Nancy Westmoreland.&nbsp;</br> &nbsp;</br> &nbsp;============================</br>
+                    preceded in death by a daughter, Lacy Nicole Oakley and a brother, Rayburn Clark Oakley. <br/> Pallbearers will be Robert Fitzgerald, Jerry Lee Fitzgerald, Marvin Fitzgerald, Ken Kizer, Nick Reichmann and Marvin Scott.
+                    Honorary pallbearers will be Buddy Burns, Daniel Beard, Freddie Owens, Michelle Scott and Nancy Westmoreland. <br/>  <br/>  ============================<br/>
                     <i>Added here by Wayne Austin sent in by Mary Bob McClain 4 Feb 2009. Obit</i></b><i>
                 </i><b><i>added here by Wayne Austin sent in by Mary Bob McClain Sep 2016.</i>
-                </b><i></br> &nbsp;</i><b>
-                    <CENTER>
-                        <a href="AdkisonCemList.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a>
-                    </CENTER>
+                </b><i><br/>  </i><b>
+                    </b></p><center><b>
+                        <a href="AdkisonCemList.html"><img <="" border="0" font="" height="56" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" width="100"/></a>
+                    </b></center><b>
                 </b>
-            </p>
-    </body>
+            <p></p>
+    
 
-</html>
+</blockquote></body></html>
