--- a/AdkisonCem/Obits01.html
+++ b/AdkisonCem/Obits01.html
@@ -1,29 +1,27 @@
-<html>
-
-    <head>
-        <meta http-equiv="content-language" content="en-us">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="../main.css">
+<html><head>
+        <meta content="en-us" http-equiv="content-language"/>
+        <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+        <link href="../main.css" rel="stylesheet" type="text/css"/>
         <title>Adkison Cemetery</title>
     </head>
 
     <body>
         <blockquote>
-            <p align="center"><b>ADKISON CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE</br>
-                    </br> BAKER, Gladys McGaw, 15 Jul 1930 - 17 Jul 2011 (d/o late Lee Allen McGaw &amp; Sarah Elizabeth &quot;Lizzie&quot; Dial McGaw; w/o Clarence Baker mar. 46 yrs. he died 9 Dec 1997; preceded in death by daughter Pamela Sue Baker
-                    Wiley, sisters, Lois McGaw Scott and Maggie Lee McGaw Potts, brother, James Wesley McGaw.)</br> &nbsp;</br> &nbsp;Gladys McGaw Baker, 81, former resident of Williamson County, died Sunday, July 17, 2011 at her residence on Hampton
-                    Road in Maury County where she made her home for a number of years.</br> Funeral services will be conducted Wednesday at 11:00 a.m. at Oakes &amp; Nichols with Mike Williams officiating. Burial will follow in Adkison Cemetery. The
-                    family will visit with friends Monday and Tuesday from 4:00 to 8:00 p.m. at the funeral home. Notes of sympathy may be sent to www.oakesandnichols.com.</br> She was the daughter of the late Lee Allen McGaw and Sarah Elizabeth
-                    &quot;Lizzie&quot; Dial McGaw and attended the Union School. She worked for several years at Dixie Manufacturing Company and Jameson Bedding Company. Mrs. Baker enjoyed her role as a homemaker, especially sewing.</br> She was a
-                    member of the Church of Christ.&nbsp;</br> On June 27, 1951, she married Clarence Baker. Their 46-year marriage ended with his death December 9, 1997.</br> Survivors include her daughter, Sandy Ragsdale; grandchildren, Chasity
+            <p align="center"><b>ADKISON CEMETERY, SANTA FE, (West) MAURY COUNTY TENNESSEE<br/>
+                    <br/> BAKER, Gladys McGaw, 15 Jul 1930 - 17 Jul 2011 (d/o late Lee Allen McGaw &amp; Sarah Elizabeth "Lizzie" Dial McGaw; w/o Clarence Baker mar. 46 yrs. he died 9 Dec 1997; preceded in death by daughter Pamela Sue Baker
+                    Wiley, sisters, Lois McGaw Scott and Maggie Lee McGaw Potts, brother, James Wesley McGaw.)<br/>  <br/>  Gladys McGaw Baker, 81, former resident of Williamson County, died Sunday, July 17, 2011 at her residence on Hampton
+                    Road in Maury County where she made her home for a number of years.<br/> Funeral services will be conducted Wednesday at 11:00 a.m. at Oakes &amp; Nichols with Mike Williams officiating. Burial will follow in Adkison Cemetery. The
+                    family will visit with friends Monday and Tuesday from 4:00 to 8:00 p.m. at the funeral home. Notes of sympathy may be sent to www.oakesandnichols.com.<br/> She was the daughter of the late Lee Allen McGaw and Sarah Elizabeth
+                    "Lizzie" Dial McGaw and attended the Union School. She worked for several years at Dixie Manufacturing Company and Jameson Bedding Company. Mrs. Baker enjoyed her role as a homemaker, especially sewing.<br/> She was a
+                    member of the Church of Christ. <br/> On June 27, 1951, she married Clarence Baker. Their 46-year marriage ended with his death December 9, 1997.<br/> Survivors include her daughter, Sandy Ragsdale; grandchildren, Chasity
                     Michelle (Jason) Jacobs, David (Beverly) Ragsdale, and Danny (Teresa) Ragsdale, all of Columbia; great-grandchildren, Michael Carter Jacobs, Gavin Reese Jacobs, Cindi Jae Ragsdale, Kelsey Breann Ragsdale, Larry David Ragsdale, and
                     Dekota Blake Estes; very devoted friend and caregiver, Mark Dugger; several nieces and nephews. She was preceded in death by a daughter, Pamela Sue Baker Wiley; sisters, Lois McGaw Scott and Maggie Lee McGaw Potts; and brother,
-                    James Wesley McGaw.</br> Active pallbearers are David Ragsdale, Danny Ragsdale, Mark Dugger, Roger Baker, Billy Hood, and Carl Scott. Honorary pallbearers include Wayne Slaughter, J. W. Slaughter, and Wendell Ragsdale.</br>
-                    &nbsp;</br> ============================================</br>
+                    James Wesley McGaw.<br/> Active pallbearers are David Ragsdale, Danny Ragsdale, Mark Dugger, Roger Baker, Billy Hood, and Carl Scott. Honorary pallbearers include Wayne Slaughter, J. W. Slaughter, and Wendell Ragsdale.<br/>
+                     <br/> ============================================<br/>
                     <i>Added here by Wayne Austin sent in by Mary Bob McClain Sep 2016.</i>
-                </b><i></br>
+                </b><i><br/>
                 </i>
-                <b>&nbsp;<a href="AdkisonCemList.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a></br> &nbsp;</b>
-    </body>
+                <b> <a href="AdkisonCemList.html"><img <="" border="0" font="" height="56" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" width="100"/></a><br/>  </b>
+    
 
-</html>
+</p></blockquote></body></html>
