--- a/AdkisonCem/Obits04.html
+++ b/AdkisonCem/Obits04.html
@@ -1,26 +1,24 @@
-<html>
-
-    <head>
-        <meta http-equiv="content-language" content="en-us">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="../main.css">
+<html><head>
+        <meta content="en-us" http-equiv="content-language"/>
+        <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+        <link href="../main.css" rel="stylesheet" type="text/css"/>
         <title>Adkison Cemetery</title>
     </head>
 
     <body>
         <blockquote>
-            <p align="center"><b>&nbsp;ADKISON CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE</br>
-                    </br> BURN, Ethel Brady, 20 Apr 1910 - 1 Jan 2004. (Maury Co. natie; d/o late George W. &amp; Annie Stanfill Brady; widow of Robert J. Burns who died in 1993; preceded in death by sister Katie Humphrey, and bros., Elton E.,
-                    Eldridge &quot;Buck&quot;, George, and Thomas Brady.)</br> &nbsp;</br> Ethel Brady Burns, 93, a resident of Woolard Road in the Santa Fe Community, died Thursday, Jan. 1, 2004, at Maury Regional Hospital.</br> Services for Mrs.
+            <p align="center"><b> ADKISON CEMETERY, SANTA FE, (West) MAURY COUNTY TENNESSEE<br/>
+                    <br/> BURN, Ethel Brady, 20 Apr 1910 - 1 Jan 2004. (Maury Co. natie; d/o late George W. &amp; Annie Stanfill Brady; widow of Robert J. Burns who died in 1993; preceded in death by sister Katie Humphrey, and bros., Elton E.,
+                    Eldridge "Buck", George, and Thomas Brady.)<br/>  <br/> Ethel Brady Burns, 93, a resident of Woolard Road in the Santa Fe Community, died Thursday, Jan. 1, 2004, at Maury Regional Hospital.<br/> Services for Mrs.
                     Burns will be conducted at 2 p.m. Sunday at the Williams Columbia Funeral Home with the Rev. Howard Alexander officiating. Burial will be in the Adkison Cemetery. The family will visit with friends from 5-9 p.m. Saturday at the
-                    funeral home.</br> The Maury County native was the daughter of the late George W. and Annie Stanfill Brady. She was the widow of Robert J. Burns who died in 1993. She was a homemaker and the oldest of 13 children.</br> She is
+                    funeral home.<br/> The Maury County native was the daughter of the late George W. and Annie Stanfill Brady. She was the widow of Robert J. Burns who died in 1993. She was a homemaker and the oldest of 13 children.<br/> She is
                     survived by a daughter, Josephine Sykes of Santa Fe; a son, Eugene Burns of Santa Fe; seven grandchildren; six great-grandchildren; one great-great grandchild; a brother, Jack Brady of Nashville; and four sisters, Frances Crabtree
-                    of Antioch, Irene Burns of Santa Fe, and Pauline Nicks and Sarah Potts, both of Nashville.</br> She was preceded in death by a sister, Katie Humphrey; and four brothers, Elton E. Brady, Eldridge &quot;Buck&quot; Brady, George
-                    Brady and Thomas Brady.</br> Pallbearers will be Howard Burns, Frank Burns, Charles Burns, Leroy Burns, Kenny Brady and Randy Brady.</br> &nbsp;</br> =================================</br>
+                    of Antioch, Irene Burns of Santa Fe, and Pauline Nicks and Sarah Potts, both of Nashville.<br/> She was preceded in death by a sister, Katie Humphrey; and four brothers, Elton E. Brady, Eldridge "Buck" Brady, George
+                    Brady and Thomas Brady.<br/> Pallbearers will be Howard Burns, Frank Burns, Charles Burns, Leroy Burns, Kenny Brady and Randy Brady.<br/>  <br/> =================================<br/>
                     <i>Added here by Wayne Austin sent in by Mary Bob McClain Sep 2016.</i>
-                </b><i></br>
+                </b><i><br/>
                 </i>
-                <b>&nbsp;<a href="AdkisonCemList.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a></br> &nbsp;</b>
-    </body>
+                <b> <a href="AdkisonCemList.html"><img <="" border="0" font="" height="56" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" width="100"/></a><br/>  </b>
+    
 
-</html>
+</p></blockquote></body></html>
