--- a/AdkisonCem/Obits06.html
+++ b/AdkisonCem/Obits06.html
@@ -1,26 +1,24 @@
-<html>
-
-    <head>
-        <meta http-equiv="content-language" content="en-us">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="../main.css">
+<html><head>
+        <meta content="en-us" http-equiv="content-language"/>
+        <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+        <link href="../main.css" rel="stylesheet" type="text/css"/>
         <title>Adkison Cemetery</title>
     </head>
 
     <body>
         <blockquote>
             <p align="center">
-                <b> ADKISON CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE</br>
-                    </br> &nbsp;</br> McKEE, CPL Robert Rudolph, 2 Jul 1930 - 4 Oct. 2008. (s/o Elmer &amp; Ruby Fainn McKee.) obit </br> &nbsp;Robert R. McKee, 78, retired mechanic for Union Carbide Corporation and resident of Sulphur Springs Branch
-                    Road in the Theta Community, died Saturday, October 4, 2008 at Maury Regional Hospital...</br> Burial will be in Attkisson Cemetery in the Santa Fe Community with military honors provided by Herbert Griffin American Legion Post
-                    #19...</br> The Maury County native was the son of the late Elmer McKee and Ruby Fain McKee. He served in the U. S. Army during the Korean War and was a member of the Church of Christ.&nbsp;</br>
-                    </br> U.S. Dept. of Veterans Affairs, National Cemetery Association:&nbsp;</br> MCKEE, ROBERT RUDOLPH&nbsp;</br> CPL US ARMY&nbsp;</br> KOREA&nbsp;</br> DATE OF BIRTH: 07/02/1930&nbsp;</br> DATE OF DEATH: 10/04/2008&nbsp;</br>
-                    BURIED AT:&nbsp;</br> ADKISON CEMETERY&nbsp;</br> MAURY COUNTY TN COLUMBIA, TN 38401&nbsp;</br> &nbsp;</br> =================================</br>
+                <b> ADKISON CEMETERY, SANTA FE, (West) MAURY COUNTY TENNESSEE<br/>
+                    <br/>  <br/> McKEE, CPL Robert Rudolph, 2 Jul 1930 - 4 Oct. 2008. (s/o Elmer &amp; Ruby Fainn McKee.) obit <br/>  Robert R. McKee, 78, retired mechanic for Union Carbide Corporation and resident of Sulphur Springs Branch
+                    Road in the Theta Community, died Saturday, October 4, 2008 at Maury Regional Hospital...<br/> Burial will be in Attkisson Cemetery in the Santa Fe Community with military honors provided by Herbert Griffin American Legion Post
+                    #19...<br/> The Maury County native was the son of the late Elmer McKee and Ruby Fain McKee. He served in the U. S. Army during the Korean War and was a member of the Church of Christ. <br/>
+                    <br/> U.S. Dept. of Veterans Affairs, National Cemetery Association: <br/> MCKEE, ROBERT RUDOLPH <br/> CPL US ARMY <br/> KOREA <br/> DATE OF BIRTH: 07/02/1930 <br/> DATE OF DEATH: 10/04/2008 <br/>
+                    BURIED AT: <br/> ADKISON CEMETERY <br/> MAURY COUNTY TN COLUMBIA, TN 38401 <br/>  <br/> =================================<br/>
                     <i>Added here by Wayne Austin sent in by Mary Bob McClain Sep 2016.</i>
-                </b><i></br>
+                </b><i><br/>
                 </i>
                 <b>
-                    <a href="AdkisonCemList.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a></b>
-    </body>
+                    <a href="AdkisonCemList.html"><img <="" border="0" font="" height="56" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" width="100"/></a></b>
+    
 
-</html>
+</p></blockquote></body></html>
