--- a/AdkisonCem/Obits08.html
+++ b/AdkisonCem/Obits08.html
@@ -1,31 +1,29 @@
-<html>
-
-    <head>
-        <meta http-equiv="content-language" content="en-us">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="../main.css">
+<html><head>
+        <meta content="en-us" http-equiv="content-language"/>
+        <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+        <link href="../main.css" rel="stylesheet" type="text/css"/>
         <title>Adkison Cemetery</title>
     </head>
 
     <body>
         <blockquote>
-            <p align="center"><b> ADKISON CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE</br>
-                    </br> POTTS, Maggie Lee McGaw,&nbsp;8 Mar. 1928 - d 17 Jul 2005 in Columbia, Tn. ( Maury Co. native; dau. of Lee Allen McGaw and Sarah Elizabeth Dial McGaw; mar. 12 Sep 1946 to Arthur Potts, who died 8 Feb 1991.)</br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Mr
-                    s.&nbsp;Maggie&nbsp;Lee McGaw&nbsp;Potts, 77, long-time resident of the Santa Fe Community, died Sunday, July 17, 2005 at Maury Regional Hospital.</br> Funeral services will be conducted Tuesday at 10:00 a.m. at Oakes &amp;
+            <p align="center"><b> ADKISON CEMETERY, SANTA FE, (West) MAURY COUNTY TENNESSEE<br/>
+                    <br/> POTTS, Maggie Lee McGaw, 8 Mar. 1928 - d 17 Jul 2005 in Columbia, Tn. ( Maury Co. native; dau. of Lee Allen McGaw and Sarah Elizabeth Dial McGaw; mar. 12 Sep 1946 to Arthur Potts, who died 8 Feb 1991.)<br/>
+                                                                       Mr
+                    s. Maggie Lee McGaw Potts, 77, long-time resident of the Santa Fe Community, died Sunday, July 17, 2005 at Maury Regional Hospital.<br/> Funeral services will be conducted Tuesday at 10:00 a.m. at Oakes &amp;
                     Nichols with Rev. Jack Taylor officiating. Burial will be in the Adkisson Cemetery. The family will visit with friends Monday from 3:00 to 8:00 p.m. at the funeral home. Notes of sympathy may be sent
-                    to&nbsp;www.oakesandnichols.com.</br> The Maury County native was the daughter of the late Lee Allen McGaw and Sarah Elizabeth Dial McGaw. She was a member of the Santa Fe Baptist Church.</br> She was married September 12, 1946 to
-                    Arthur&nbsp;Potts&nbsp;who died February 8, 1991.</br> Survivors include three daughters, Brenda (Billy)&nbsp;Potts&nbsp;of Santa Fe, Edna (Ray)&nbsp;Potts&nbsp;of Santa Fe and Marilyn (Dennis) Coakley of Nashville; a sisters,
-                    Gladys Baker of Spring Hill; five grandchildren, Joey (Dianna)&nbsp;Potts, Jason (Melissa)&nbsp;Potts, Kerrie (Bucky) Roland, Kristina (Mike) Irwin and Lee (Amber) Davis; seven great-grandchildren, James&nbsp;Potts,
-                    Jacob&nbsp;Potts, Janna&nbsp;Potts, Karlee Roland, Kortney Roland, Hailey&nbsp;Potts&nbsp;and Encara Davis.</br> Pallbearers are Joey&nbsp;Potts, Jason&nbsp;Potts, Lee Davis, Mike Irwin, Bucky Rowland and James&nbsp;Potts.</br>
+                    to www.oakesandnichols.com.<br/> The Maury County native was the daughter of the late Lee Allen McGaw and Sarah Elizabeth Dial McGaw. She was a member of the Santa Fe Baptist Church.<br/> She was married September 12, 1946 to
+                    Arthur Potts who died February 8, 1991.<br/> Survivors include three daughters, Brenda (Billy) Potts of Santa Fe, Edna (Ray) Potts of Santa Fe and Marilyn (Dennis) Coakley of Nashville; a sisters,
+                    Gladys Baker of Spring Hill; five grandchildren, Joey (Dianna) Potts, Jason (Melissa) Potts, Kerrie (Bucky) Roland, Kristina (Mike) Irwin and Lee (Amber) Davis; seven great-grandchildren, James Potts,
+                    Jacob Potts, Janna Potts, Karlee Roland, Kortney Roland, Hailey Potts and Encara Davis.<br/> Pallbearers are Joey Potts, Jason Potts, Lee Davis, Mike Irwin, Bucky Rowland and James Potts.<br/>
                     The family is grateful to Dr. Gaylon Harris, Dr. John Worthman, Dr. Houston Jameson, Dr. Steven Woodley, and Dr. Mark Messenger for their sincere concern and efforts during her illness; for the special care of her nurse in recent
-                    months, Annette Morrow, and for the loving care of special friends, Linda Kay&nbsp;Potts&nbsp;and Jean Hood.</br> ================================</br> &nbsp;<i>Added here by Wayne Austin sent in by Mary Bob McClain Sep
+                    months, Annette Morrow, and for the loving care of special friends, Linda Kay Potts and Jean Hood.<br/> ================================<br/>  <i>Added here by Wayne Austin sent in by Mary Bob McClain Sep
                         2016.</i></b><b>
-                    <CENTER>
-                        <a href="AdkisonCemList.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a>
-                    </CENTER>
+                    </b></p><center><b>
+                        <a href="AdkisonCemList.html"><img <="" border="0" font="" height="56" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" width="100"/></a>
+                    </b></center><b>
                 </b>
-            </p>
-    </body>
+            <p></p>
+    
 
-</html>
+</blockquote></body></html>
