--- a/AdkisonCem/Ragsdale01.html
+++ b/AdkisonCem/Ragsdale01.html
@@ -1,32 +1,30 @@
-<html>
-
-    <head>
-        <meta http-equiv="content-language" content="en-us">
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="../main.css">
+<html><head>
+        <meta content="en-us" http-equiv="content-language"/>
+        <meta content="text/html; charset=utf-8" http-equiv="content-type"/>
+        <link href="../main.css" rel="stylesheet" type="text/css"/>
         <title>Adkison Cemetery</title>
     </head>
 
     <body>
         <blockquote>
-            <p align="center"><b>ADKISON CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE</br>
-                    </br> RAGSDALE, Sanra Gail Baker, 20 Oct 1952 - 2 Oct. 2013. (d/o Clarence Baker &amp; Gladys McGaw Baker.) obit</br>
-                    </br> Sandra Gail Ragsdale, age 60 of Columbia, passed away suddenly at her residence on Wednesday morning, October 2, 2013.</br> Sandy was born October 20, 1952 in Williamson County. She was the daughter of Clarence Baker and
-                    Gladys McGaw Baker, and was a member of the Church of Christ. She had worked as a Pharmacy Technician for Discount Drugs in Franklin.</br> Sandy is remembered by her sons as &quot;good-hearted&quot; in her willingness to help
+            <p align="center"><b>ADKISON CEMETERY, SANTA FE, (West) MAURY COUNTY TENNESSEE<br/>
+                    <br/> RAGSDALE, Sanra Gail Baker, 20 Oct 1952 - 2 Oct. 2013. (d/o Clarence Baker &amp; Gladys McGaw Baker.) obit<br/>
+                    <br/> Sandra Gail Ragsdale, age 60 of Columbia, passed away suddenly at her residence on Wednesday morning, October 2, 2013.<br/> Sandy was born October 20, 1952 in Williamson County. She was the daughter of Clarence Baker and
+                    Gladys McGaw Baker, and was a member of the Church of Christ. She had worked as a Pharmacy Technician for Discount Drugs in Franklin.<br/> Sandy is remembered by her sons as "good-hearted" in her willingness to help
                     anybody she could. She enjoyed travelling to the mountains and loved a good conversation or visit with friends. Above all, though, Sandy loved her grandkids more than anything. Her gentle and compassionate spirit will be missed by
-                    her family and friends.</br> In addition to her parents, she was preceded in death by a sister: Pamela Sue Baker. She is survived by two sons: David (Beverly) Ragsdale of Columbia and Danny (Teresa) Ragsdale of Culleoka; 5
-                    grandchildren: Mercedes Estes, Cindy Jae Ragsdale, Blake Estes, Kelsey Breann Ragsdale, and Larry David Ragsdale; niece: Chasity Jacobs; and great-nephews: Michael and Gavin Jacobs. </br>
-                    <i></br>
+                    her family and friends.<br/> In addition to her parents, she was preceded in death by a sister: Pamela Sue Baker. She is survived by two sons: David (Beverly) Ragsdale of Columbia and Danny (Teresa) Ragsdale of Culleoka; 5
+                    grandchildren: Mercedes Estes, Cindy Jae Ragsdale, Blake Estes, Kelsey Breann Ragsdale, and Larry David Ragsdale; niece: Chasity Jacobs; and great-nephews: Michael and Gavin Jacobs. <br/>
+                    <i><br/>
                     </i>
                     <i>Added here by Wayne Austin sent in by Mary Bob McClain 19 Feb 2015.</i>
-                </b><i></br>
+                </b><i><br/>
                 </i>
                 <b>
-                    <CENTER>
-                        <a href="AdkisonCemList.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a>
-                    </CENTER>
+                    </b></p><center><b>
+                        <a href="AdkisonCemList.html"><img <="" border="0" font="" height="56" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" width="100"/></a>
+                    </b></center><b>
                 </b>
-            </p>
-    </body>
+            <p></p>
+    
 
-</html>
+</blockquote></body></html>
