fix home link to marshall county

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="red-heading"><a href="./lawrence.html">Lawrence</a></p>
         <p class="red-heading"><a href="./lewis.html">Lewis</a></p>
         <p class="red-heading"><a href="./lincoln.html">Lincoln</a></p>
-        <p class="red-heading"><a href="./giles.html">Marshall</a></p>
+        <p class="red-heading"><a href="./marshall.html">Marshall</a></p>
         <p class="red-heading"><a href="./maury.html">Maury</a></p>
         <p class="red-heading"><a href="./mcnairy.html">McNairy</a></p>
         <p class="red-heading"><a href="./moore.html">Moore</a></p>
@@ -37,7 +37,7 @@
         <!-- TODO: add alabama site -->
         <p class="red-heading"><a href="./AlabamaCemeteriesWeb/index.html">Northern Alabama Cemeteries</a></p>
         <p class="red-heading"><a href="./restoration/cemeteryrestoration.html">Maintaining and restoring old cemeteries</a></p>
-    
+
 
 
 </body></html>
